# homework6

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  matrix.cpp  matrix.h  menudata.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  pages.html  test_matrix_gtest.cpp
.github/workflows/: release.yml
d0/d30/: md_README.html
d1/d46/: group__matrix__element.html  group__matrix__element.js
d1/de5/: classTestController-members.html
d3/d3f/: classMatrix.html  classMatrix.js
d5/d7e/: test__matrix__gtest_8cpp.html  test__matrix__gtest_8cpp.js  test__matrix__gtest_8cpp_source.html
d5/d84/: matrix_8cpp.html  matrix_8cpp.js  matrix_8cpp_source.html
d5/ddc/: classTestController.html  classTestController.js
d6/d3a/: classMatrix_1_1MatrixElement-members.html
d8/d85/: classMatrix_1_1Iterator.html
d9/dd0/: classMatrix_1_1Iterator-members.html
da/d07/: classMatrix-members.html
da/d9e/: CMakeLists_8txt.html
da/ddd/: README_8md.html
dd/d7a/: group__matrix.html  group__matrix.js
dd/df4/: matrix_8h.html  matrix_8h_source.html
de/d41/: classMatrix_1_1MatrixElement.html
df/d9e/: group__matrix__iterator.html  group__matrix__iterator.js
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  files_1.js  files_3.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  groups_0.js  pages_0.js  related_0.js  searchdata.js  typedefs_0.js  variables_2.js
